[SELC-5970] start refactor dashboard